[package]
name = "zbarust"
version = "0.0.7"
authors = ["Mehow"]
edition = "2018"
repository = "https://github.com/Rthe1st/zbarust"
keywords = ["zbar", "qrcode", "scanner", "barcode", "scan"]
categories = ["external-ffi-bindings", "encoding"]
description= "High-level and low-level ZBar binding for the Rust language."
readme = "README.md"
license = "LGPL-2.1"

[dependencies]
libc = "0.2.43"
enum-ordinalize = "2.0.5"

[dev-dependencies]
qrcode-generator = "1.0.2"
image = "0.20"

[build-dependencies]
autotools = "0.2"
pkg-config = "0.3.14"