[package]
name = "zbarust"
version = "0.0.7"
authors = ["Mehow"]
edition = "2018"
repository = "https://github.com/Rthe1st/zbarust"
keywords = ["zbar", "qrcode", "scanner", "barcode", "scan"]
categories = ["external-ffi-bindings", "encoding"]
description= "High-level and low-level ZBar binding for the Rust language."
readme = "README.md"
license = "LGPL-2.1"
publish = false

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2.43"

[dev-dependencies]
qrcode-generator = "1.0.2"
image = "0.20"
